--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 3 safari version",
+      "last 3 ie version"
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.1.0",
+    "cross-env": "^7.0.3",
     "gh-pages": "^3.1.0"
   }
 }
